--- a/style/style.css
+++ b/style/style.css
@@ -6,35 +6,60 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: #f73e46;
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 .face {
-  height: 220px;
-  border-radius: 60px;
-  width: 130px;
+  top: 60px;
+  height: 550px;
+  border-radius: 150px;
+  width: 325px;
   background-color: #fabf9f;
-  overflow: hidden;
   position: relative;
   display: flex;
   justify-content: center;
   z-index: 44;
 }
 
+.ears {
+  height: 62.5px;
+  width: 62.5px;
+  background-color: #fabf9f;
+  opacity: 0.7;
+  position: absolute;
+  top: 160px;
+  z-index: 888;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.ear-left {
+  left: -31.25px;
+}
+
+.ear-right {
+  right: -31.25px;
+}
+
 .eyes {
   display: flex;
   align-items: flex-end;
-  height: 20px;
+  height: 50px;
   overflow: hidden;
   background-color: transparent;
   position: absolute;
-  bottom: 140px;
+  bottom: 350px;
   justify-content: space-between;
 }
 
 .eye-left,
 .eye-right {
-  height: 30px;
-  width: 30px;
+  height: 75px;
+  width: 75px;
   background-color: #fff;
   border-radius: 50%;
   display: flex;
@@ -43,19 +68,21 @@ body {
 }
 
 .point {
-  height: 6px;
-  width: 6px;
+  height: 15px;
+  width: 15px;
   position: absolute;
-  bottom: 9px;
+  bottom: 22.5px;
   background-color: #000;
   border-radius: 50%;
 }
 
 .beard {
   background-color: #002438;
-  height: 130px;
-  border-top-left-radius: 40px;
-  border-top-right-radius: 40px;
+  height: 325px;
+  border-top-left-radius: 100px;
+  border-top-right-radius: 100px;
+  border-bottom-left-radius: 150px;
+  border-bottom-right-radius: 150px;
   position: absolute;
   bottom: 0;
   width: 100%;
@@ -66,10 +93,10 @@ body {
 
 .mouthContainer {
   position: relative;
-  top: -25px;
+  top: -62.5px;
   background-color: transparent;
-  height: 50px;
-  width: 50px;
+  height: 125px;
+  width: 125px;
   border-radius: 50%;
   display: flex;
   align-items: flex-end;
@@ -78,38 +105,38 @@ body {
 
 .nose {
   position: relative;
-  top: -10px;
-  height: 35px;
-  width: 35px;
+  top: -25px;
+  height: 87.5px;
+  width: 87.5px;
   background-color: #fabf9f;
   border-radius: 50%;
 }
 
 .mouth {
   background-color: #6c0224;
-  height: 25px;
+  height: 62.5px;
   width: 100%;
 }
 
 .teeth {
   background-color: #fff;
-  height: 10px;
+  height: 25px;
   width: 75%;
-  border-bottom-right-radius: 7px;
+  border-bottom-right-radius: 17.5px;
 }
 
 .tongue {
   background-color: #f72460;
   position: relative;
-  bottom: -3px;
-  height: 14px;
+  bottom: -7.5px;
+  height: 35px;
   width: 50%;
-  border-top-right-radius: 5px;
+  border-top-right-radius: 12.5px;
 }
 
 .neck {
-  height: 60px;
-  width: 80px;
+  height: 150px;
+  width: 200px;
   background-color: #6c0224;
   position: relative;
   top: -40px;
